[package]
name = "multi-level-squads"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multi_level_squads"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
squads-multisig-program = { version = "2.0.0", features = [
    "cpi",
    "no-entrypoint",
] }
anchor-spl = "0.29.0"
